Remove ignored option MaxPermSize