@@ -123,7 +123,6 @@ checkstyle {
 }
 
 test {
-    jvmArgs '-XX:MaxPermSize=256m'
     useJUnitPlatform()
 }
 
